@startuml 現在のER図関連図
' Relations-only ER diagram (各テーブルのカラムは省略)

' Supabase auth schema
entity auth.users
entity root_accounts
entity account_providers
entity auth_events
entity user_languages
entity languages
entity points_transactions

' Relationships
' ルートアカウント
auth.users ||--||auth_users : "AFTER INSERT TRIGGER"
auth_users ||--||  root_accounts: "1:1 belongs_to"

root_accounts ||-r-o{ account_providers : "1..* has"
root_accounts ||-r-o{ auth_events : "1..* has"
root_accounts ||-r-o{ user_languages : "1..* has"
root_accounts ||-r-o{ languages : "1..* has"
root_accounts ||-r-o{ points_transactions : "1..* has"


' ユーザープロファイル
root_accounts ||-d-o{ user_profiles


' メモ
note right of auth.users
    Supabase auth schema
end note

@enduml
